--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "productivity",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "dependencies": {
-    "electron": "^9.2.1"
+    "electron": "^9.2.1",
+    "jquery": "^3.5.1"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1", 
-		"start": "electron ."
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "electron ."
   },
   "author": "",
   "license": "ISC"
