--- a/project-project-vue/package.json
+++ b/project-project-vue/package.json
@@ -14,7 +14,9 @@
   "main": "background.js",
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^3.0.0-0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^9.0.3",
+    "vue": "^3.0.0-rc.6",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
