--- a/project-project-vue/package.json
+++ b/project-project-vue/package.json
@@ -19,7 +19,8 @@
     "sass-loader": "^9.0.3",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuex": "^3.5.1"
+    "vuex": "^3.5.1",
+    "yarn": "^1.22.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
