--- a/project-project-vue/package.json
+++ b/project-project-vue/package.json
@@ -18,6 +18,7 @@
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "sass-loader": "^9.0.3",
+    "sweetalert2": "^9.17.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.5.1",
