--- a/project-project-vue/package.json
+++ b/project-project-vue/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.6.5",
     "es6-promise": "^4.2.8",
     "jquery": "^3.5.1",
+    "jquery.scrollto": "^2.1.2",
     "node-sass": "^4.14.1",
     "sass-loader": "^9.0.3",
     "sweetalert2": "^9.17.1",
