--- a/project-project-vue/package.json
+++ b/project-project-vue/package.json
@@ -19,6 +19,7 @@
     "jquery.scrollto": "^2.1.2",
     "node-sass": "^4.14.1",
     "sass-loader": "^9.0.3",
+    "shelljs": "^0.8.4",
     "sweetalert2": "^9.17.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
