--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "copolla-todo",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -9,7 +9,9 @@
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps"
+    "postuninstall": "electron-builder install-app-deps", 
+		"electron:generate-icons": "electron-icon-builder --input=./public/icon.png --output=build --flatten --icon=icons/Icon.icns"
+
   },
   "main": "background.js",
   "dependencies": {
@@ -34,6 +36,7 @@
     "babel-eslint": "^10.1.0",
     "electron": "^9.2.1",
     "electron-devtools-installer": "^3.1.0",
+    "electron-icon-builder": "^1.0.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "vue-cli-plugin-electron-builder": "~2.0.0-rc.4",
