--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "copolla-todo",
-  "version": "1.0.1",
+  "author": "Kevin Hsu, Alek Westover",
+  "description": "todo app",
+  "version": "1.0.2",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
